# cocotbext-spi

./: .gitignore  .pre-commit-config.yaml  COPYING  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: regression-tests.yml
cocotbext/spi/: __init__.py  about.py  exceptions.py  spi.py
cocotbext/spi/devices/: generic.py
cocotbext/spi/devices/ADI/: ADXL345.py  __init__.py
cocotbext/spi/devices/TI/: ADS8028.py  DRV8304.py  __init__.py
cocotbext/spi/devices/Trinamic/: TMC4671.py  __init__.py
docs/timing-diagrams/: Timing Diagrams.md
tests/spi/: Makefile  test_spi.py  test_spi.v
tests/spi_devices/ADI/adxl345/: Makefile  test_adxl345.py  test_adxl345.v
tests/spi_devices/TI/ads8028/: Makefile  test_ads8028.py  test_ads8028.v
tests/spi_devices/TI/drv8304/: Makefile  test_drv8304.py  test_drv8304.v
tests/spi_devices/Trinamic/tmc4671/: Makefile  test_tmc4671.py  test_tmc4671.v
