[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]

[project]
name = "cocotbext-spi"
description = "SPI modules for cocotb"
readme = "README.md"
license = "MIT"
authors = [
    {name = "overcookedlobster", email = "your_email@example.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dynamic = [
  "version",
]
dependencies = [
  "cocotb>=2.0.0",
]

[project.urls]
repository = "https://github.com/overcookedlobster/cocotbext-spi"

[tool.setuptools_scm]
write_to = "cocotbext/spi/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--import-mode importlib"

[project.optional-dependencies]
dev = [
    "cocotb-test>=0.2.6",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "tox",
]
lint = [
    "flake8>=5.0.4",
]
