# package information
[metadata]
name = cocotbext-spi
version = attr: cocotbext.spi.about.__version__
description = SPI modules for cocotb
keywords = spi, cocotb
author = Spencer Chang
author_email = schang412@gmail.com
license = MIT
url = https://github.com/schang412/cocotbext-spi
project_urls =
    Bug Tracker = https://github.com/schang412/cocotbext-spi/issues
    Source Code = https://github.com/schang412/cocotbext-spi
download_url = https://github.com/schang412/cocotbext-spi/tarball/master
long_description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb

[options.extras_require]
test =
    pytest
    cocotb-test

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib
